--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mdurl==0.1.2
 numpy==1.26.0
+opencv-python-headless==4.8.1.78
 packaging==23.1
 paho-mqtt==1.6.1
 pandas==2.1.1
